--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
               </div>
             </div>
   
+            <h2 class="text-center mb-4 pt-5">My Work</h2>
+
+            <div class="card bg-white col-3 pt-2 w-50 h-50">
+              <a href="https://www.youtube.com/@DodotXD" target="_blank">
+                <img src="/images/bannerY.png" class="img-thumbnail h-100 p-0 m-0" alt="My YouTube Channel">
+              </a>
+              <div class="card-body">
+                <h5 class="card-title text-dark">My YouTube Channel</h5>
+                <p class="card-text text-muted">Dodot XD - Video Editing, Animation, and Gameplay</p>
+                <a href="https://www.youtube.com/@DodotXD" class="btn btn-danger" target="_blank">Visit Channel</a>
+              </div>
+            </div>
+
           </div>
         </section>
         <section id="contact" class="py-5 bg-secondary text-black">
